Make blog posts reportable

--- a/decidim-blogs/app/views/decidim/blogs/posts/_actions.html.erb
+++ b/decidim-blogs/app/views/decidim/blogs/posts/_actions.html.erb
@@ -13,7 +13,7 @@
 
     <%= cell "decidim/share_button", nil %>
 
-    <%= cell "decidim/report_button", nil %>
+    <%= cell "decidim/report_button", post %>
   </div>
 </div>
 
