--- a/decidim-conferences/app/views/decidim/conferences/conferences/show.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/conferences/show.html.erb
@@ -44,14 +44,14 @@ edit_link(
     <section class="content-block">
       <h2 class="h2 decorator"><%= t("conferences.show.introduction", scope: "decidim") %></h2>
       <div class="content-block__description">
-        <%= decidim_sanitize_editor translated_attribute(current_participatory_space.short_description) %>
+        <%= decidim_sanitize_editor_admin translated_attribute(current_participatory_space.short_description) %>
       </div>
     </section>
 
     <section class="content-block content-block__2col">
       <h2 class="h2 decorator"><%= t("conferences.show.details", scope: "decidim") %></h2>
       <div class="content-block__description">
-        <%= decidim_sanitize_editor translated_attribute(current_participatory_space.description) %>
+        <%= decidim_sanitize_editor_admin translated_attribute(current_participatory_space.description) %>
       </div>
 
       <div>
@@ -72,7 +72,7 @@ edit_link(
       <section class="content-block">
         <h2 class="h2 decorator"><%= t("decidim.conferences.show.objectives") %></h2>
         <div class="content-block__description">
-          <%= decidim_sanitize_editor translated_attribute(current_participatory_space.objectives) %>
+          <%= decidim_sanitize_editor_admin translated_attribute(current_participatory_space.objectives) %>
         </div>
       </section>
     <% end %>
