--- a/decidim-budgets/app/cells/decidim/budgets/budget_list_item/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/budget_list_item/show.erb
@@ -1,29 +1,21 @@
 <div class="<%= card_class %> card__highlight">
-  <div class="card__highlight-text">
+  <div class="card__highlight-text w-[60%]">
     <%= link_to budget_path(budget), class: link_class do %>
-      <h3 class="h3 text-secondary">
+      <h3 class="h3 text-secondary inline-block align-middle">
         <%= translated_attribute(title) %>
       </h3>
+      <% if voted? %>
+        <%= icon "check-double-line", class: 'inline-block align-middle fill-success ml-2 h-[1.5em] w-[1.5em]' %>
+      <% end %>
     <% end %>
 
     <%= decidim_sanitize html_truncate(translated_attribute(description), length: 140) %>
 
-    <%= render :projects_count %>
-  </div>
-
-  <% if !voting_finished? %>
-    <div class="budget-list__icon mr-s">
-      <% if voted? %>
-        <span class="button tiny success card--list__check card--list__check--disabled card--list__check--inline">
-          <%= icon "check", class: "icon--small", role: "img", aria_label: t("decidim.budgets.budget_list_item.voting_finished") %>
-        </span>
-      <% elsif progress? %>
-        <span class="button tiny warning card--list__check card--list__check--disabled card--list__check--inline">
-          <%= icon "bookmark", class: "icon--small", role: "img", aria_label: t("decidim.budgets.budget_list_item.voting_started") %>
-        </span>
-      <% end %>
+    <div class="divide-x-2 divide-gray-3">
+      <%= render :projects_count %>
+      <%= render :vote_action %>
     </div>
-  <% end %>
+  </div>
 
   <div class="budget__card__highlight-vote">
     <div class="h3 text-gray-2">
@@ -32,10 +24,9 @@
         <%= budget_to_currency(total_budget) %>
       </strong>
     </div>
-    <%= link_to budget_path(budget), class: "button button__sm button__secondary text-left mt-2 #{button_class}" do %>
+    <%= link_to budget_path(budget), class: "button button__sm text-left mt-2 #{button_class} #{'button__secondary' if !voted?} #{'button__text-secondary' if voted?}" do %>
       <span><%= button_text %></span>
-      <%= icon "arrow-right-line" %>
-      <%= render :vote_action %>
+      <%= icon "arrow-right-line", class: "#{'text-secondary' if !voted?}" %>
     <% end %>
   </div>
 </div>
