--- a/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
@@ -2,7 +2,7 @@
       budget_order_line_item_path(model.budget, project_id: model),
       method: vote_button_method,
       remote: true,
-      class: "button button__sm button__secondary budget-list__action #{vote_button_class} #{'button__transparent-secondary' if !resource_added?}",
+      class: "button button__lg button__transparent-secondary budget-list__action w-full #{vote_button_class}",
       id: "project-vote-button-#{model.id}",
       data: {
         add: !resource_added?,
