--- a/decidim-conferences/app/packs/stylesheets/decidim/conferences/_conference.scss
+++ b/decidim-conferences/app/packs/stylesheets/decidim/conferences/_conference.scss
@@ -15,6 +15,23 @@
     }
   }
 
+  &__content-block{
+    @apply grid grid-cols-9 gap-x-4 place-items-start space-y-0;
+
+    > :nth-child(3n + 1),
+    > :nth-child(3n + 2){
+      @apply col-span-9 lg:col-span-6;
+    }
+
+    > :nth-child(3n){
+      @apply col-span-9 lg:col-span-3 row-span-2 lg:order-2 justify-self-center flex flex-col gap-2 max-w-full overflow-x-auto;
+    }
+
+    > :nth-child(3n + 2){
+      @apply lg:order-3;
+    }
+  }
+
   &__nav{
     @apply divide-y divide-white [&>li]:py-3.5 first:[&>li]:pt-0 last:[&>li]:pb-0;
 
