--- a/decidim-conferences/app/views/decidim/conferences/conferences/show.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/conferences/show.html.erb
@@ -48,7 +48,7 @@ edit_link(
       </div>
     </section>
 
-    <section class="content-block content-block__2col">
+    <section class="content-block conference__content-block">
       <h2 class="h2 decorator"><%= t("conferences.show.details", scope: "decidim") %></h2>
       <div class="content-block__description">
         <%= decidim_sanitize_editor_admin translated_attribute(current_participatory_space.description) %>
