drawer and projects

--- a/decidim-budgets/app/views/decidim/budgets/projects/index.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/index.html.erb
@@ -74,6 +74,9 @@
         </label>
       </div>
     </div>
+    <div id="projects" aria-live="polite">
+      <%= render partial: "projects" %>
+    </div>
   </div>
 
 <% end %>
