--- a/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
@@ -33,21 +33,22 @@ edit_link(
 <% end %>
 <%= render layout: "layouts/decidim/shared/drawer" do %>
   <%= cell("decidim/budgets/limit_announcement", budget) %>
-  <div class="voting-wrapper">
-    <div class="section">
-      <% if component_settings.geocoding_enabled? && project.geocoded? %>
-        <%= render partial: "decidim/shared/static_map", locals: { icon_name: "projects", geolocalizable: project } %>
-      <% end %>
-      <%= cell("decidim/budgets/project_selected_status", project, as_label: true) %>
-      <%= decidim_sanitize_editor translated_attribute project.description %>
-      <%= cell "decidim/budgets/project_tags", project, context: { extra_classes: ["tags--project"] } %>
-    </div>
-    <%= attachments_for project %>
-    <%= linked_resources_for project, :proposals, "included_proposals" %>
-    <%= linked_resources_for project, :results, "included_projects" %>
+  <% if component_settings.geocoding_enabled? && project.geocoded? %>
+    <%= render partial: "decidim/shared/static_map", locals: { icon_name: "projects", geolocalizable: project } %>
+  <% end %>
+  <%= cell("decidim/budgets/project_selected_status", project, as_label: true) %>
+  <%= decidim_sanitize_editor translated_attribute project.description %>
+  <%= cell "decidim/budgets/project_tags", project, context: { extra_classes: ["tags--project"] } %>
+  <%= attachments_for project %>
+  <%= linked_resources_for project, :proposals, "included_proposals" %>
+  <%= linked_resources_for project, :results, "included_projects" %>
 
-    <%= comments_for project, polymorphic: [project.budget] %>
+  <%= comments_for project, polymorphic: [project.budget] %>
+  <div class="mt-8">
+    <%# REDESIGN_PENDING: this value for the reference %>
     <%= resource_reference(project) %>
+    <%# REDESIGN_PENDING: same cell as acountability, use the previous values %>
+    <%#= cell "decidim/accountability/result_metadata", result, template: :show_footer %>
   </div>
   <% content_for :drawer_aside do %>
     <div class="view-header">
@@ -68,10 +69,6 @@ edit_link(
             <div class="budget__definition-data__number"><%= budget_to_currency project.budget_amount %></div>
             <div class="blog__actions-right">
               <%= render partial: "decidim/shared/follow_button", locals: { followable: project, large: false  } %>
-
-              <%= cell "decidim/share_button", nil %>
-
-              <%= cell "decidim/report_button", nil %>
             </div>
           </div>
         </div>
