Redesign: upload modal (#9858)
* prepare update-modal cell

* clean conversations modal as of the shared styles

* shared html styles for modals

* workaround: redesign_enabled? not working on cells called from helper

* full refactor upload modal files

* fix linters

* fix styles dropzone

* handle asynchronous validations

* general fixes and new casuistics

* fix dragover highlight & remove files on cancel

* update dropzone when errors

* add space to files

* Prepare button to open login modal to work with redesigned and legacy layouts

* Split upload modal cell in legacy and redesigned versions and allow to call it passing a redesign option

* Call upload method passing the redesigned option based on the context

* Fix linter offense

* Normalize locale file

* eslint consistent-return

* eslint consistent-return

* Update test

* move action button to the right if it's the only child

* rearrangement frontend libraries

* fix upload modal after redesigned assets

* remove current image block (fix removal error)

* preview image

* good version files.erb

* Fix external_link initialization in legacy design index.js

* Force flaky test

* Fix attachment blob call

* Remove unused attachment label method

* Display default image if defined and no uploaded attachments

* Update test

* Update selector in test

* Revert "Force flaky test"

This reverts commit 075f6eb77d46193d0977d37d1e8e7942e08ca3c4.

* Improve deprecation after redesign documentation in js file

* overflow dropzone auto

* disabled form submit when there are erorrs on the files

* reset dropzone on cancel

* pass argument multiple

* update translation

* better looking responsive

* disable save only when errors & mark as removable

* include logic to remove the current uploaded item

* Delegate redesign_enabled? to template in form builder

* fixes frontend upload modal

* Fix form_builder spec to take redesign into account

* avoid drag flickering on webkit browsers

* Avoid errors in determi

--- a/decidim-verifications/app/views/decidim/verifications/id_documents/authorizations/_form.html.erb
+++ b/decidim-verifications/app/views/decidim/verifications/id_documents/authorizations/_form.html.erb
@@ -10,9 +10,7 @@
   </div>
 
   <% if using_online? %>
-    <div class="field">
-      <%= form.upload :verification_attachment %>
-    </div>
+    <%= form.upload :verification_attachment, button_class: "button button__lg button__transparent-secondary verification__upload-button" %>
   <% end %>
 
   <%= form.hidden_field :verification_type, value: verification_type %>
