--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -44,6 +44,7 @@
   @import "stylesheets/decidim/redesigned_drawer.scss";
   @import "stylesheets/decidim/redesigned_drawer_metadata.scss";
   @import "stylesheets/decidim/redesigned_modal.scss";
+  @import "stylesheets/decidim/redesigned_modal_update.scss";
   @import "stylesheets/decidim/redesigned_floating_help.scss";
 }
 
