Improve initiative create and edit form
Add form_field for initiative_type to create form
Move form_field for state to the end on edit form
add help text to author-select
fix specs

--- a/decidim-initiatives/app/views/decidim/initiatives/create_initiative/fill_data.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/create_initiative/fill_data.html.erb
@@ -20,12 +20,21 @@
       <div class="card__content">
         <%= decidim_form_for(@form, url: next_wizard_path, method: :put, html: { class: "form new_initiative_form", novalidate: false }) do |f| %>
           <%= form_required_explanation %>
-          <%= f.hidden_field :type_id %>
           <div class=section>
             <% unless single_initiative_type? %>
               <div class="field">
-                <label for="type_description"><%= t ".initiative_type" %></label>
-                <%= text_field_tag :type_description, strip_tags(translated_attribute(initiative_type.title)), readonly: true %>
+                <%= f.select :type_id,
+                                initiative_type_options,
+                                {},
+                                {
+                                  disabled: !@form.signature_type_updatable?,
+                                  "data-scope-selector": "initiative_decidim_scope_id",
+                                  "data-scope-id": f.object.scope_id.to_s,
+                                  "data-scope-search-url": decidim_initiatives.initiative_type_scopes_search_url,
+                                  "data-signature-types-selector": "initiative_signature_type",
+                                  "data-signature-type": current_initiative&.signature_type,
+                                  "data-signature-types-search-url": decidim_initiatives.initiative_type_signature_types_search_url
+                                } %>
               </div>
             <% end %>
 
@@ -77,7 +86,7 @@
               <div class="field">
                 <%= f.select :decidim_user_group_id,
                              Decidim::UserGroups::ManageableUserGroups.for(current_user).verified.map { |g| [g.name, g.id] },
-                             include_blank: current_user.name %>
+                             include_blank: current_user.name, help_text: t(".decidim_user_group_id_help") %>
               </div>
             <% end %>
 
