Implement ToS summary (#9222)
* feat(privacy_policy): Manage privacy policy as a content_block

* feat(privacy_policy): add summary to sign up

* chore(sign_up): privacy_policy link target blank

* fix rubocop issues

* fix: privacy_policy unused_manifests method

* feat(core): add seed for privacy policy summary

* feat(spec): add system/admin_manages_organization_privacy_policy_spec.rb

* refactor: move from settings to static_pages, rename to ToS

* chore(css): tweak sign_up ToS text styles

* fix(i18n): remove unused keys

* feat(seeds): add ToS summary content_block

* fix specs

* add summary content block to tabbed page view

* Fix rubocop offenses

* Add migration to move terms and conditions page content to content_block

* Keep the content of the tos page even with summary content block active

* Fix test

* Show summary section in ToS page

Co-authored-by: Francisco Bolívar <francisco.bolivar@nazaries.com>

--- a/decidim-core/app/views/decidim/pages/_standalone.html.erb
+++ b/decidim-core/app/views/decidim/pages/_standalone.html.erb
@@ -10,6 +10,10 @@
     <%= cell "decidim/tos_page", :announcement %>
 
     <div class="editor-content">
+      <% page_content_blocks.each do |content_block| %>
+        <%= cell content_block.manifest.cell, content_block %>
+      <% end %>
+
       <%= decidim_sanitize_editor_admin translated_attribute page.content %>
     </div>
 
