--- a/decidim-core/app/views/decidim/devise/registrations/new.html.erb
+++ b/decidim-core/app/views/decidim/devise/registrations/new.html.erb
@@ -47,11 +47,13 @@
     <div id="card__tos" class="login__form-block">
       <h4 class="h4"><%= t("decidim.devise.registrations.new.tos_title") %></h4>
 
-      <p>
-        <%= strip_tags(translated_attribute(terms_and_conditions_page.content)) %>
-      </p>
+      <div class="tos-text">
+        <% terms_and_conditions_summary_content_blocks.each do |content_block| %>
+          <%= cell content_block.manifest.cell, content_block %>
+        <% end %>
+      </div>
 
-      <%= f.check_box :tos_agreement, label: t("decidim.devise.registrations.new.tos_agreement", link: link_to(t("decidim.devise.registrations.new.terms"), page_path("terms-and-conditions"))), label_options: { class: "login__form-checkbox-label" } %>
+      <%= f.check_box :tos_agreement, label: t("decidim.devise.registrations.new.tos_agreement", link: link_to(t("decidim.devise.registrations.new.terms"), page_path("terms-and-conditions"), target: "_blank")), label_options: { class: "login__form-checkbox-label" } %>
     </div>
 
     <div id="card__newsletter" class="login__form-block">
