--- a/decidim-core/app/views/decidim/pages/_tabbed.html.erb
+++ b/decidim-core/app/views/decidim/pages/_tabbed.html.erb
@@ -26,6 +26,10 @@
         <div>
           <h2 class="h2"><%= translated_attribute page.title %></h2>
 
+          <% page_content_blocks.each do |content_block| %>
+            <%= cell content_block.manifest.cell, content_block %>
+          <% end %>
+
           <div class="editor-content mt-6">
             <%= decidim_sanitize_editor_admin translated_attribute page.content %>
           </div>
