Integrate shared filters template

--- a/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
@@ -14,195 +14,17 @@
     </button>
   </div>
 
-  <%
-    filters = [];
-
-    filters << ["date", "radio", :with_any_date, filter_date_values, "decidim.meetings.meetings.filters"] if display_filter_date;
-    filters << ["type", "check_box", :with_any_type, filter_type_values, "decidim.meetings.meetings.filters"] if display_filter_type;
-
-    # REDESIGN_PENDING: transform into array as the others
-    #filters << ["scope", "check_box", :with_any_scope, directory_filter_scopes_values, "decidim.meetings.meetings.filters"] if display_filter_scopes;
-    #filters << ["category", "check_box", :with_any_global_category, directory_filter_categories_values, "decidim.meetings.meetings.filters"] if display_filter_categories;
-
-    filters << ["origin", "check_box", :with_any_origin, directory_filter_origin_values, "decidim.meetings.meetings.filters"] if display_filter_origin;
-    filters << ["space_type", "check_box", :with_any_space, directory_meeting_spaces_values, "decidim.meetings.directory.meetings.index"] if display_filter_space_type;
-    filters << ["activity", "radio", :activity, activity_filter_values, "decidim.meetings.meetings.filters"] if display_filter_activity;
-  %>
+  <% filters = [].tap do |f|
+       f.append(method: :with_any_date, collection: filter_date_values, label_scope: "decidim.meetings.meetings.filters", id: "date", type: :radio_buttons) if filter_options[:display_filter_date]
+       f.append(method: :with_any_type, collection: filter_type_values, label_scope: "decidim.meetings.meetings.filters", id: "type") if filter_options[:display_filter_type]
+       f.append(method: :with_any_scope, collection: directory_filter_scopes_values, label_scope: "decidim.meetings.meetings.filters", id: "scope") if filter_options[:display_filter_scopes]
+       f.append(method: :with_any_global_category, collection: directory_filter_categories_values, label_scope: "decidim.meetings.meetings.filters", id: "category") if filter_options[:display_filter_categories]
+       f.append(method: :with_any_origin, collection: filter_origin_values, label_scope: "decidim.meetings.meetings.filters", id: "origin") if filter_options[:display_filter_origin]
+       f.append(method: :with_any_space, collection: directory_meeting_spaces_values, label_scope: "decidim.meetings.directory.meetings.index", id: "space_type") if filter_options[:display_filter_space_type]
+       f.append(method: :activity, collection: activity_filter_values, label_scope: "decidim.meetings.meetings.filters", id: "activity", type: :radio_buttons) if filter_options[:display_filter_activity]
+    end %>
 
   <% filters.each do |f| %>
-    <div class="filter-container">
-      <button data-controls="panel-dropdown-menu-<%= f[0] %>" data-open="true">
-        <%= icon "arrow-down-s-line" %>
-        <%= icon "arrow-up-s-line" %>
-        <span><%= t(f[0], scope: f[4]) %></span>
-      </button>
-      <div id="panel-dropdown-menu-<%= f[0] %>">
-        <%= form.send(
-            f[1] == "radio" ? "collection_radio_buttons" : "collection_check_boxes",
-            f[2],
-            f[3],
-            :first,
-            :last
-        ) do |builder|
-            builder.label { builder.send(f[1] == "radio" ? "radio_button" : "check_box", class: "reset-defaults" , hidden: true ) + content_tag(:div, builder.text, class: "filter" ) }
-          end %>
-      </div>
-    </div>
+    <%= form.collection_filter(**f) %>
   <% end %>
-
-  <%# REDESIGN_PENDING: nested filters are mocked %>
-  <div class="filter-container">
-    <button data-controls="panel-scope" data-open="true">
-      <%= icon "arrow-down-s-line" %>
-      <%= icon "arrow-up-s-line" %>
-      <span><%= "SCOPE MOCK" %></span>
-    </button>
-
-    <div id="panel-scope">
-      <input type="hidden" name="filter[with_any_date]" value="" autocomplete="off">
-
-      <label for="no-childs">
-        <input class="reset-defaults"
-          type="checkbox" value="all" name="filter[with_any_date]"
-          id="no-childs" hidden="hidden">
-
-        <div class="filter">
-          <%= icon "apps-2-line" %>
-          <span>No childs</span>
-        </div>
-      </label>
-
-      <label for="one-nest">
-        <input
-          class="reset-defaults" type="checkbox" value="upcoming" checked="checked" name="filter[with_any_date]"
-          id="one-nest" hidden="hidden">
-
-        <div class="filter">
-          <%= icon "calendar-2-line" %>
-          <span>One nesting level</span>
-          <button data-controls="panel-dropdown-menu-one-nest" onclick="event.preventDefault()">
-            <%= icon "arrow-down-s-fill" %>
-            <%= icon "arrow-up-s-fill" %>
-          </button>
-        </div>
-      </label>
-
-      <div id="panel-dropdown-menu-one-nest">
-        <label for="one-child-1">
-          <input
-            class="reset-defaults" type="checkbox" value="upcoming" checked="checked" name="filter[with_any_date]"
-            id="one-child-1" hidden="hidden">
-
-          <div class="filter">
-            <%= icon "calendar-2-line" %>
-            <span>Option 1 in child</span>
-          </div>
-        </label>
-        <label for="one-child-2">
-          <input
-            class="reset-defaults" type="checkbox" value="upcoming" checked="checked" name="filter[with_any_date]"
-            id="one-child-2" hidden="hidden">
-
-          <div class="filter">
-            <%= icon "calendar-2-line" %>
-            <span>Option 2 in child</span>
-          </div>
-        </label>
-      </div>
-
-      <label for="multi-nest">
-        <input
-          class="reset-defaults" type="checkbox" value="past" name="filter[with_any_date]"
-          id="multi-nest" hidden="hidden">
-
-        <div class="filter">
-          <%= icon "calendar-check-line" %>
-          <span>More nesting levels</span>
-          <button data-controls="panel-multi-nest" data-open="false" onclick="event.preventDefault()">
-            <%= icon "arrow-down-s-fill" %>
-            <%= icon "arrow-up-s-fill" %>
-          </button>
-        </div>
-      </label>
-
-      <div id="panel-multi-nest">
-        <label for="multi-nest-1">
-          <input
-            class="reset-defaults" type="checkbox" value="upcoming" checked="checked" name="filter[with_any_date]"
-            id="multi-nest-1" hidden="hidden">
-
-          <div class="filter">
-            <%= icon "calendar-2-line" %>
-            <span>sublevel 1 element 1</span>
-            <button data-controls="panel-multi-nest-1" data-open="false" onclick="event.preventDefault()">
-              <%= icon "arrow-down-s-fill" %>
-              <%= icon "arrow-up-s-fill" %>
-            </button>
-          </div>
-        </label>
-
-        <div id="panel-multi-nest-1">
-          <label for="multi-nest-1-1">
-            <input
-              class="reset-defaults" type="checkbox" value="past" name="filter[with_any_date]"
-              id="multi-nest-1-1" hidden="hidden">
-
-            <div class="filter">
-              <%= icon "calendar-check-line" %>
-              <span>sublevel 2 element 1</span>
-            </div>
-          </label>
-          <label for="multi-nest-1-2">
-            <input
-              class="reset-defaults" type="checkbox" value="past" name="filter[with_any_date]"
-              id="multi-nest-1-2" hidden="hidden">
-
-            <div class="filter">
-              <%= icon "calendar-check-line" %>
-              <span>sublevel 2 element 2</span>
-            </div>
-          </label>
-        </div>
-
-        <label for="one-child-2">
-          <input
-            class="reset-defaults" type="checkbox" value="upcoming" checked="checked" name="filter[with_any_date]"
-            id="one-child-2" hidden="hidden">
-
-          <div class="filter">
-            <%= icon "calendar-2-line" %>
-            <span>sublevel 1 element 2</span>
-            <button data-controls="panel-multi-nest-2" data-open="false" onclick="event.preventDefault()">
-              <%= icon "arrow-down-s-fill" %>
-              <%= icon "arrow-up-s-fill" %>
-            </button>
-          </div>
-        </label>
-
-        <div id="panel-multi-nest-2">
-          <label for="multi-nest-2-1">
-            <input
-              class="reset-defaults" type="checkbox" value="past" name="filter[with_any_date]"
-              id="multi-nest-2-1" hidden="hidden">
-
-            <div class="filter">
-              <%= icon "calendar-check-line" %>
-              <span>sublevel 2 element 1</span>
-            </div>
-          </label>
-          <label for="multi-nest-2-2">
-            <input
-              class="reset-defaults" type="checkbox" value="past" name="filter[with_any_date]"
-              id="multi-nest-2-2" hidden="hidden">
-
-            <div class="filter">
-              <%= icon "calendar-check-line" %>
-              <span>sublevel 2 element 2</span>
-            </div>
-          </label>
-        </div>
-      </div>
-    </div>
-  </div>
-
-<% end #end_form %>
+<% end %>
